[GEOT-7814] Upgrade codebase to Java 17 language features
commit cd8ff5d620819c3109d880560add91f19e829f90
Author: Gabriel Roldan <gabriel.roldan@camptocamp.com>
Date:   Sat Sep 13 21:57:40 2025 -0300

    Fix logic error in IntersectionFeatureCollection geometry processing

    Replace confusing attribute reassignment pattern with dedicated
    geomAttribute variable to fix intersection mode processing and
    fix OpenRewrite-introduced bugs.

commit 7ed3fc82126bb18eb744bcd0711543c0ed49a8c8
Author: Gabriel Roldan <gabriel.roldan@camptocamp.com>
Date:   Sat Sep 13 21:27:24 2025 -0300

    More openrewrite instanceof pattern matching fixes

commit 285d5654e232f7cfe6ed3d9f721c2f9521e5f6f4
Author: Gabriel Roldan <gabriel.roldan@camptocamp.com>
Date:   Sat Sep 13 20:55:57 2025 -0300

    Fix another too generic pattern matching in instanceof from OpenRewrite

    ```
    -            if (value instanceof Property attribute) {
    +            if (value instanceof ComplexAttribute attribute) {
    ```
    broke app-schema.

    Added other small readability improvements while chasing the bug

commit 1cf8907e419c8875d1c94c3877632b5dcd33c0b8
Author: Gabriel Roldan <gabriel.roldan@camptocamp.com>
Date:   Sat Sep 13 20:17:45 2025 -0300

    Fix logic error in ReporjectFeatureReader

    Openrewrite introduced a bug that broke TransformFeatureSourceTest

    if(attributes[i] instanceof Geometry geometry){
      attributes[i] = transformer.transform(geometry);
      JTS.setCRS(geometry,...)
    }

    hence attributes[i] was not being assigned the target CRS

commit 00d03dfb0e56f391d9f78134651e0f85295582a1
Author: Gabriel Roldan <gabriel.roldan@camptocamp.com>
Date:   Thu Jul 17 13:10:54 2025 -0300

    Replace OpenRewrite generic names by sensible ones

commit df447257a36a45336dcae66143ab4ee6a67d456f
Author: Gabriel Roldan <gabriel.roldan@camptocamp.com>
Date:   Thu Jul 17 12:18:57 2025 -0300

    Fix gt-xml's FeatureTypeTransformer error introduced by OpenRewrite

commit f007